[FIX] documents: `DocumentsInspector` layout issue, adapt for milk
Prior to this commit, and due to milk changes, a few issues need to be
fixed or adapted:

- The topbar of the chatter in Documents was positioned too close to the
top and required adjustment.

- The icons at the top of the inspector (btn-group) were no longer
centered properly within their button/container. Also by having a
default margin-left of 1px, spacing between buttons needs to be removed.

- Elements such as link colors, tags icons, and other components using
brand-primary lacked sufficient contrast against the dark background.

This commit resolves these issues

task-3336458
part of task-3326263

closes odoo/enterprise#43001

X-original-commit: 995f4ca3ab637c1383aab50f1ab89df4a1b6812e
Related: odoo/odoo#126068

--- a/documents/static/src/views/inspector/documents_inspector.scss
+++ b/documents/static/src/views/inspector/documents_inspector.scss
@@ -106,6 +106,8 @@
     }
 
     .o_documents_inspector_info {
+        --btn-group-gap: #{-1 * $btn-border-width};
+
         border-top: 1px solid $o-dms-inspector-bg-light;
         padding: $o-dms-p-small $o-dms-p $o-dms-p;
 
@@ -115,9 +117,6 @@
             box-shadow: inset 0 1px 0 fade_out(white, 0.9), 0 1px 0 fade_out(white, 0.9);
             text-shadow: 0 1px 0 $o-dms-inspector-bg-darker;
             color: $o-dms-inspector-txt-light;
-            @include media-breakpoint-up(sm) {
-                width: 32px;
-            }
 
             &:not(:disabled) {
                 @include o-hover-text-color($o-dms-inspector-txt-light, white);
@@ -298,13 +297,18 @@
                 display: flex;
                 align-items: flex-start;
 
+                button {
+                    background-color: $o-dms-color-action;
+                    color: color-contrast($o-dms-color-action);
+
+                    &:hover, &:focus {
+                        background-color: darken($o-dms-color-action, 10%); // Focus state needed for keyboard accessibility
+                    }
+                }
+
                 .o_inspector_trigger_rule {
                     font-size: 10px;
                     padding: 1px 10px;
-                }
-
-                &:hover {
-                    color: white;
                 }
             }
         }
@@ -361,7 +365,7 @@
 
         .o_inspector_model {
             padding: $o-dms-p-tiny;
-            @include o-hover-text-color(lighten($o-brand-primary, 5%), $o-brand-primary);
+            @include o-hover-text-color(lighten($o-dms-color-action, 5%), $o-dms-color-action);
             @include o-text-overflow(block, $o-dms-inspector-width - $o-dms-inspector-label-breakpoint - $o-dms-p*2);
         }
 
@@ -374,32 +378,17 @@
 .o_inspector_open_chatter {
     @include o-hover-text-color($o-dms-inspector-txt-lighter, $white);
     background-color: $o-dms-inspector-bg-light;
-    box-shadow: inset 0 1px 0 transparentize(white, 0.9), 0 1px 0 $o-dms-inspector-bg-darker;
-
-    &.o_inspector_open_chatter_preview {
-        width: 32px;
-        height: 32px;
-        padding: 8px;
-        font-size: 16px;
-        @include o-position-absolute($right: 5px, $top: 5px);
-    }
-
-    &:not(.o_inspector_open_chatter_preview) {
-        width: 30px;
-        height: 30px;
-        padding: 7px;
-        font-size: 15px;
-        margin-right: 0.5rem;
-    }
+    border: 1px solid $o-dms-inspector-bg-darker;
+    box-shadow: inset 0 1px 0 fade_out(white, 0.9), 0 1px 0 fade_out(white, 0.9);
+    text-shadow: 0 1px 0 $o-dms-inspector-bg-darker;
+    color: $o-dms-inspector-txt-light;
 }
 
 .o_document_chatter_container {
     display: block;
     position: relative;
     overflow: auto;
-    box-shadow: inset 0 5px 0 $o-dms-inspector-bg-light;
     flex: 0 0 auto;
-    padding-top: 1px;
 
     --ChatterTopbar-padding-right: calc(#{$o-horizontal-padding});
 
